assemblage__about layout

--- a/assembly.html
+++ b/assembly.html
@@ -858,7 +858,40 @@
             </div>
           </section>
 
-
+          <!-- ======================================= -->
+          <!-- new block -->
+          <section class="assemblage__about">
+            <div class="assemblage__about-inner">
+              <div class="assemblage__about-img-wrapper">
+                <a class="assemblage__about-img-link" href="#">
+                  <img
+                    class="assemblage__about-img"
+                    width="232"
+                    height="41"
+                    src="./img/stopgame-logo.png"
+                    sizes=""
+                    alt="">
+                </a>
+              </div>
+              <div class="assemblage__about-info">
+                <b class="assemblage__about-notification">
+                  <span class="svg-icon icon-approve"></span>
+                  Данная сборка создана или проверена администрацией
+                </b>
+                <p class="assemblage__about-text">
+                  Эта сборка создана по рекомендациям геймерского интернет-портала
+                  StopGame, Комлпектующие Эта сборка создана по рекомендациям геймер-
+                  ского интернет-портала StopGame, Комлпектующие Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Имеет эта, точках реторический которое мир всемогущая дорогу продолжил жаренные рот переулка живет он это рыбными пустился, текст текстов большой?
+                </p>
+                <p class="assemblage__about-source">Источник:
+                  <cite>
+                    <a class="assemblage__about-source-link" href="#">stopgame.ru</a>
+                  </cite>
+                </p>
+              </div>
+            </div>
+          </section>
+          <!-- ======================================= -->
 
 
           <section class="assemblage__info assemblage-info">
@@ -953,18 +986,14 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/intel-core-i5-12400f/" class="product__link product__image-wrapper">
-                    <img
-                      sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px"
-                      data-source-format="png"
-                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
                               ./thumbs/s/1920_0/uploads/images/items/629a6b2ddf02f204647507.webp 1920w"
-                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp"
-                      alt="Intel Core i5-12400F"
+                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp" alt="Intel Core i5-12400F"
                       src="https://panel.salamander.one/uploads/images/items/629a6b2ddf02f204647507.png"
                       class="product__image">
                   </a>
@@ -1044,26 +1073,22 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/gigabyte-radeon-rx-6500-xt-gaming-oc-4g/" class="product__link product__image-wrapper">
-                    <img
-                      sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px"
-                      data-source-format="png"
-                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
                               ./thumbs/s/1920_0/uploads/images/items/629a6b2ddf02f204647507.webp 1920w"
-                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp"
-                      alt="Intel Core i5-12400F"
+                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp" alt="Intel Core i5-12400F"
                       src="https://panel.salamander.one/uploads/images/items/629a6b2ddf02f204647507.png"
                       class="product__image">
                   </a>
                   <div class="product__main-part">
                     <div class="product__price-and-buttons">
 
-                      <span class="product__rating product-score-rating" data-min-p="99" data-rec-p="82" data-min-y="2021"
-                        data-rec-y="2014">2</span>
+                      <span class="product__rating product-score-rating" data-min-p="99" data-rec-p="82"
+                        data-min-y="2021" data-rec-y="2014">2</span>
 
 
                       <div class="product__buttons">
@@ -1093,7 +1118,8 @@
                           Графический процессор:
                         </span>
                         <span class="product-info__value">
-                          <a href="/ua/amd-radeon-rx-6500-xt/" class="product-specs__item-value--link">AMD Radeon RX 6500
+                          <a href="/ua/amd-radeon-rx-6500-xt/" class="product-specs__item-value--link">AMD Radeon RX
+                            6500
                             XT </a>
                         </span>
                       </p>
@@ -1142,18 +1168,14 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/gigabyte-b660-gaming-x/" class="product__link product__image-wrapper">
-                    <img
-                      sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px"
-                      data-source-format="png"
-                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
                               ./thumbs/s/1920_0/uploads/images/items/629a6b2ddf02f204647507.webp 1920w"
-                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp"
-                      alt="Intel Core i5-12400F"
+                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp" alt="Intel Core i5-12400F"
                       src="https://panel.salamander.one/uploads/images/items/629a6b2ddf02f204647507.png"
                       class="product__image">
                   </a>
@@ -1244,18 +1266,14 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/deepcool-pf600-600w/" class="product__link product__image-wrapper">
-                    <img
-                      sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px"
-                      data-source-format="png"
-                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
                               ./thumbs/s/1920_0/uploads/images/items/629a6b2ddf02f204647507.webp 1920w"
-                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp"
-                      alt="Intel Core i5-12400F"
+                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp" alt="Intel Core i5-12400F"
                       src="https://panel.salamander.one/uploads/images/items/629a6b2ddf02f204647507.png"
                       class="product__image">
                   </a>
@@ -1326,18 +1344,14 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/aerocool-aero-one-eclipse-black/" class="product__link product__image-wrapper">
-                    <img
-                      sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px"
-                      data-source-format="png"
-                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
                               ./thumbs/s/1920_0/uploads/images/items/629a6b2ddf02f204647507.webp 1920w"
-                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp"
-                      alt="Intel Core i5-12400F"
+                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp" alt="Intel Core i5-12400F"
                       src="https://panel.salamander.one/uploads/images/items/629a6b2ddf02f204647507.png"
                       class="product__image">
                   </a>
@@ -1415,18 +1429,14 @@
               <div class="product__wrapper-cover">
                 <div class="product__wrapper">
                   <a href="/ua/kingston-nv2-nvme-ssd-250gb-m2-2280/" class="product__link product__image-wrapper">
-                    <img
-                      sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px"
-                      data-source-format="png"
-                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
                               ./thumbs/s/1920_0/uploads/images/items/629a6b2ddf02f204647507.webp 1920w"
-                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp"
-                      alt="Intel Core i5-12400F"
+                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp" alt="Intel Core i5-12400F"
                       src="https://panel.salamander.one/uploads/images/items/629a6b2ddf02f204647507.png"
                       class="product__image">
                   </a>
@@ -1510,18 +1520,14 @@
                 <div class="product__wrapper">
                   <a href="/ua/kingston-fury-beast-8gb-ddr4-3200-mhz-kf432c16bb8/"
                     class="product__link product__image-wrapper">
-                    <img
-                      sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px"
-                      data-source-format="png"
-                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
                               ./thumbs/s/1920_0/uploads/images/items/629a6b2ddf02f204647507.webp 1920w"
-                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp"
-                      alt="Intel Core i5-12400F"
+                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp" alt="Intel Core i5-12400F"
                       src="https://panel.salamander.one/uploads/images/items/629a6b2ddf02f204647507.png"
                       class="product__image">
                   </a>
@@ -1614,18 +1620,14 @@
                 <div class="product__wrapper">
                   <a href="/ua/kingston-fury-beast-8gb-ddr4-3200-mhz-kf432c16bb8/"
                     class="product__link product__image-wrapper">
-                    <img
-                      sizes="(max-width: 548px) calc(100vw - 30px),
+                    <img sizes="(max-width: 548px) calc(100vw - 30px),
                              (max-width: 768px) calc(100vw - 164px),
-                             356px"
-                      data-source-format="png"
-                      srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
+                             356px" data-source-format="png" srcset="./thumbs/s/320_0/uploads/images/items/629a6b2ddf02f204647507.webp 320w,
                               ./thumbs/s/640_0/uploads/images/items/629a6b2ddf02f204647507.webp 640w,
                               ./thumbs/s/920_0/uploads/images/items/629a6b2ddf02f204647507.webp 920w,
                               ./thumbs/s/1220_0/uploads/images/items/629a6b2ddf02f204647507.webp 1220w,
                               ./thumbs/s/1920_0/uploads/images/items/629a6b2ddf02f204647507.webp 1920w"
-                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp"
-                      alt="Intel Core i5-12400F"
+                      src="./thumbs/s/0_0/uploads/images/items/629a6b2ddf02f204647507.webp" alt="Intel Core i5-12400F"
                       src="https://panel.salamander.one/uploads/images/items/629a6b2ddf02f204647507.png"
                       class="product__image">
                   </a>
